# shelfbook-backend

./: docker-compose.yml
apps/service-books/: Dockerfile  main.py  pyproject.toml
apps/service-books/api/: __init__.py  books.py
apps/service-books/core/: __init__.py  base.py  config.py  db.py
apps/service-books/domain/: __init__.py  author.py  authors.py  book.py  books.py
apps/service-books/handlers/: __init__.py
apps/service-books/handlers/api/: __init__.py  authors.py  books.py
apps/service-books/migrations/: env.py
apps/service-books/migrations/versions/: 3f670eaf2673_test_2.py  3feffba67fd7_second.py  4a01671f1406_test_5.py  9cbd7350a619_test_4.py  a3d4c429efb9_test.py  cd613a0cd68a_test_3.py  ea971579350f_init_migration.py
apps/service-books/repository/: __init__.py  author.py  book.py
apps/service-books/schema/: __init__.py  author.py  book.py  combine.py  confirmer.py
apps/service-books/service/: __init__.py  author.py  book.py
