[tool.poetry]
name = "service-books"
version = "0.1.0"
description = ""
authors = ["Vitaly <mr.peunov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
SQLAlchemy = "^1.4.39"
pythondi = "^1.2.4"
alembic = "^1.8.1"
databases = "^0.6.0"
asyncpg = "^0.26.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
